syntax = "proto3";

package rello;

import "google/api/annotations.proto";

service Rello {
  rpc CheckListWebhook(ChecklistUpdate) returns (Empty) {
    option (google.api.http) = {
      post: "/"
      body: "*"
    };
  }

}

message Empty{}

message ChecklistUpdate {
  Model model = 1;
  Action action = 2;
}

message Model {
  string id = 1;
  string name = 2;
  string idBoard = 3;
  string idCard = 4;
  int32 pos = 5;
  repeated CheckItem checkItems = 6;
}

message CheckItem {
  string state = 1;
  string idChecklist = 2;
  string id = 3;
  string name = 4;
  int32 pos = 6;
  int64 relloId = 7;
  string userId = 8;
}

message Action {
  string id = 1;
  string idMemberCreator = 2;
  Data data = 3;
  string type = 4;
  string date = 5;
  MemberCreator memberCreator = 6;
}

message Data {
  CheckItem checkItem = 1;
  CheckList checklist = 2;
  Card card = 3;
  Board board = 4;
}

message CheckList {
  string name = 1;
  string id = 2;
}

message Card {
  string name = 1;
  string id = 2;
  string shortLink = 3;
  int32 idShort = 4;
}

message Board {
  string name = 1;
  string id = 2;
  string shortLink = 3;
}

message MemberCreator {
  string id = 1;
  string avatarHas = 2;
  string fullName = 3;
  string initials = 4;
  string username = 5;
}
